# neuroHub

./: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  agent.md  environment.yaml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
data/bigp3bci-an-open-diverse-and-machine-learning-ready-p300-based-brain-computer-interface-dataset-1.0.0/: README.md  SHA256SUMS.txt
neurohub/: __init__.py  config.py  features.py  io.py  preproc.py  viz.py
notebooks/: bigp3bci_demo.ipynb  bigp3bci_exploration.ipynb  bigp3bci_visual.ipynb  p300_starter.ipynb
scripts/: fetch_bigp3bci.sh  run_pipeline.py
tests/: test_bigp3bci.py  test_cli.py  test_features.py  test_io.py  test_notebook.py  test_p300.py  test_preproc.py
