[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neurohub"
version = "0.1.0"
description = "P300 EEG utilities"
authors = [{name = "neurohub"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mne>=1.9",
    "scikit-learn>=1.4",
    "click>=8.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurohub*"]

